--- a/package.json
+++ b/package.json
@@ -27,8 +27,6 @@
     "apps-script-oauth2": "github:googleworkspace/apps-script-oauth2"
   },
   "devDependencies": {
-    "source-map-loader": "^5.0.0",
-    "ts-loader": "^9.5.2",
     "@babel/core": "^7.22.11",
     "@babel/eslint-parser": "^7.22.11",
     "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
@@ -38,6 +36,8 @@
     "@types/google-apps-script-oauth2": "^38.0.0",
     "@types/google.picker": "^0.0.39",
     "@types/jest": "^29.5.4",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "babel-loader": "^9.1.3",
     "copy-webpack-plugin": "^11.0.0",
     "cross-env": "^7.0.3",
@@ -54,7 +54,9 @@
     "jest": "^29.6.4",
     "npm-watch": "^0.11.0",
     "prettier": "^3.0.3",
+    "source-map-loader": "^5.0.0",
     "terser-webpack-plugin": "^5.3.9",
+    "ts-loader": "^9.5.2",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4"
   },
